# ai-practice-projects

./: .gitignore  README.md
assistant/: README.md  go.mod  go.sum  main.go
assistant/constants/: constants.go
assistant/openai/: assistant.go  file.go  thread.go  vectorstore.go
bill-price-calculator/: README.md  go.mod  main.go
content-moderator/: README.md  go.mod  go.sum  main.go
content-moderator/fileops/: fileops.go
content-moderator/scraper/: scraper.go
embedding-and-rag/: Makefile  pyproject.toml
embedding-and-rag/snippets/: 01_cosine_similarity.py  02_why_cosine.py  03_vector_db.py  04_enn_vs_ann.py  05_chunking_strategies.py  06_retrieval_techniques.py  07_hallucinations_grounding.py
film-fusion/: README.md  go.mod  main.go
film-fusion/loader/: loader.go
film-fusion/utils/: image.go
hugging-face-inference/: README.md  index.js  package-lock.json  package.json  server.js
hugging-face-inference/color-photo-ui/: index.js  (+1 more)
image-generator/: README.md  go.mod  go.sum  main.go  sample.env
motivational-speaker/: README.md  go.mod  main.go
movie-chatbot/: README.md  go.mod  go.sum  main.go
multimodality/: README.md  go.mod  main.go
ollama/: index.js  package-lock.json  package.json
pollyglot/: README.md  go.mod  main.go
pop-choice/: README.md  go.mod  go.sum  main.go
reAct/: README.md  go.mod  go.sum  main.go
stock-price-predictor/: README.md  go.mod  go.sum  main.go  sample.env
transformer-ui/: index.js
vector-embeddings/: README.md  go.mod  go.sum  main.go  sample.env
voice-based-tracker/: Makefile  go.mod  go.sum  main.go
(+37 files in other folders)
